Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/Detalle_Promocion_por_Modelo__c.object-meta.xml
<CustomObject>
    <label>Detalle Promoción por Modelo</label>
    <nameField>
        <label>Nombre de Detalle Promoción por Modelo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalles Promociones por Modelos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>