Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>