Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>5</length>
    <type>Text</type>
</CustomField>