Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <label>Nivel</label>
    <length>5</length>
    <type>Text</type>
</CustomField>