Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/fields/Observacion__c.field-meta.xml
<CustomField>
    <fullName>Observacion__c</fullName>
    <label>Observación</label>
    <type>TextArea</type>
</CustomField>