Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Detalles Promociones por Modelos</relationshipLabel>
    <relationshipName>Detalles_Promociones_por_Modelos</relationshipName>
    <type>Lookup</type>
</CustomField>