Inmob-Salesforce/force-app/main/default/objects/Detalle_Promocion_por_Modelo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Proyecto__c</field>
        <operation>contains</operation>
        <value>Villa Italia</value>
    </filters>
    <label>Todos</label>
</ListView>